Update views to show generic info

--- a/views/welcome.hbs
+++ b/views/welcome.hbs
@@ -7,7 +7,7 @@
   <link
     href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800"
     rel="stylesheet" type="text/css" />
-  <title>Dev Snacks Corner</title>
+  <title>App Title</title>
 
   <style type="text/css">
     [style*="Open Sans"] {
@@ -707,7 +707,7 @@
                         <td height="60" valign="middle" width="100%" style="text-align: left" class="fullCenter"
                           id="logo">
                           <a href="javascriptL;" style="text-decoration: none">
-                            <h2>Dev Snacks Corner</h2>
+                            <h2>App Title</h2>
                           </a>
                         </td>
                       </tr>
@@ -748,9 +748,8 @@
                       <tr>
                         <td height="60" valign="middle" width="100%" style="text-align: center" class="fullCenter"
                           id="box">
-                          <a href="#"><img width="175"
-                              src="https://firebasestorage.googleapis.com/v0/b/dev-snacks-corner.appspot.com/o/sendmail_img%2Fdev-snacks-logo-bg.png?alt=media&token=75865ab4-24d2-4ded-a702-dceb94830c3a"
-                              alt="" border="0" /></a>
+                          <a href="#"><img width="175" src="https://docs.nestjs.com/assets/logo-small.svg"
+                              alt="nestjs-logo" border="0" /></a>
                         </td>
                       </tr>
                     </table>
@@ -820,9 +819,8 @@
                                     line-height: 24px;
                                     font-weight: 400;
                                   " class="fullCenter" id="box2">
-                                Sugar, spice and everything nice. Find best
-                                qualtiy crunchy and tasty snacks in just a few
-                                quick clicks.
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                                incididunt ut labore et dolore magna aliqua.
                               </td>
                               <td width="30" class="erase"></td>
                             </tr>
@@ -863,13 +861,13 @@
                                       'Open Sans';
                                     color: #ffffff;
                                   ">
-                                <a href="https://dev-snacks-corner.web.app/" style="
+                                <a href="#" style="
                                       color: #ffffff;
                                       font-size: 14px;
                                       text-decoration: none;
                                       line-height: 34px;
                                       width: 100%;
-                                    ">Let's go shopping!</a>
+                                    ">Let's go!</a>
                               </td>
                             </tr>
                           </table>
@@ -946,9 +944,8 @@
                               font-weight: 700;
                               padding-left: 10px;
                             " class="fullCenter">
-                          <a style="text-decoration: none"><img
-                              src="https://firebasestorage.googleapis.com/v0/b/dev-snacks-corner.appspot.com/o/sendmail_img%2Ficon_30_3.png?alt=media&token=10d3a623-320f-41d7-809a-8ba9a5bd899c"
-                              width="30" alt="" border="0" style="
+                          <a style="text-decoration: none"><img src="https://docs.nestjs.com/assets/logo-small.svg"
+                              width="30" alt="nestjs-logo" border="0" style="
                                   vertical-align: middle;
                                   padding-bottom: 4px;
                                 " /></a>
@@ -968,13 +965,13 @@
                               line-height: 22px;
                               font-weight: 400;
                             " class="fullCenter">
-                          Shop No. 21, Raj Garden,
+                          Address Line 1,
                           <br />
-                          Mahavir Nagar, Kandivali West,
+                          Address Line 2,
                           <br />
-                          Opp. Panchasheel Joggers Park,
+                          Landmark
                           <br />
-                          Mumbai - 400067
+                          City, State - 12345
                         </td>
                       </tr>
                     </table>
@@ -1007,8 +1004,7 @@
                               line-height: 28px;
                               font-weight: 700;
                             " class="fullCenter">
-                          <a style="text-decoration: none"><img
-                              src="https://firebasestorage.googleapis.com/v0/b/dev-snacks-corner.appspot.com/o/sendmail_img%2Ficon_30_4.png?alt=media&token=76162cf5-193b-4665-bef3-9b76f37f60f3"
+                          <a style="text-decoration: none"><img src="https://docs.nestjs.com/assets/logo-small.sv"
                               width="30" alt="" border="0" style="
                                   vertical-align: middle;
                                   padding-bottom: 4px;
